# airtable_pg_sync

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
airtable_pg_sync/: __init__.py  cli.py  sync.py
airtable_pg_sync/core/: change_handler.py  env.py
airtable_pg_sync/core/clients/: airtable.py  postgres.py  response_parser.py
airtable_pg_sync/core/types/: bridges.py  changes.py  concepts.py  env_types.py
airtable_pg_sync/initial_sync/: individual_view_syncer.py  initial_syncer.py  reduced_memory_usage_row_syncer.py  row_syncer.py  schema_syncer.py  table_syncer.py  view_syncer.py
airtable_pg_sync/perpetual_sync/: perpetual_syncer.py  webhook_listener.py
src/: logging.conf  main.py
src/core/: change_handler.py
src/core/clients/: airtable.py  postgres.py  response_parser.py
src/core/types/: bridges.py  changes.py  concepts.py
src/initial_sync/: initial_syncer.py  row_syncer.py  schema_syncer.py  table_syncer.py  view_syncer.py
src/perpetual_sync/: perpetual_syncer.py  webhook_listener.py
